--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "cloudinary": "^1.30.1",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "html-pdf": "^3.0.1",
+    "mongoose": "^6.5.2",
     "next": "^12.2.5",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.54.5"
   },
   "devDependencies": {
     "@babel/core": "^7.17.2",
