--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,6 +40,7 @@
     "react-hooks/exhaustive-deps": 0,
     "no-underscore-dangle": 0,
     "import/prefer-default-export": 0,
+    "camelcase": 0,
     "react/jsx-filename-extension": [
       1,
       {
