--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,6 +41,7 @@
     "no-underscore-dangle": 0,
     "import/prefer-default-export": 0,
     "camelcase": 0,
+    "no-bitwise": 0,
     "react/jsx-filename-extension": [
       1,
       {
