--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cloudinary": "^1.30.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "html-pdf-node": "^1.0.8",
     "mongoose": "^6.5.2",
     "next": "^12.2.5",
     "react": "17.0.2",
