--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 
+test 
 *.code-workspace
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
