--- a/package.json
+++ b/package.json
@@ -22,15 +22,21 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "bluebird": "^3.7.2",
     "cloudinary": "^1.30.1",
+    "connect-busboy": "^1.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "html-pdf-node": "^1.0.8",
+    "handlebars": "^4.7.7",
+    "inline-css": "^3.0.0",
     "mongoose": "^6.5.2",
     "next": "^12.2.5",
+    "puppeteer": "^17.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.54.5"
+    "sass": "^1.54.5",
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.17.2",
